<resources>
    <string name="app_name">一天</string>
    <string name="city_name">北京</string>
    <string name="weather_text">晴</string>
    <string name="weather_temperature">°C</string>
    <string name="life_dress">穿衣建议</string>
    <string name="life_car">洗车建议</string>
    <string name="life_sport">运动指数</string>
    <string name="life_uv">紫外线强度</string>
    <string name="life_flu">感冒指数</string>
    <string name="life_travel">旅游指数</string>
    <string name="string_default">默认值</string>
    <string name="news">今日头条</string>
    <string name="write_location_phone">需要读写权限、定位权限、手机状态权限</string>
    <string name="error_text">发生未知错误</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="location_description_why_we_need_the_permission">默认</string>
    <string name="location_description_title">默认</string>
    <string name="storage_description_why_we_need_the_permission">moren</string>
    <string name="storage_description_title">moren</string>
    <string name="storage_and_location_rationale">需要定位权限</string>
    
    
    <string name="summary_star">综合指数</string>
    <string name="love_star">爱情指数</string>
    <string name="love_txt">爱情运势</string>
    <string name="money_star">财富指数</string>
    <string name="money_txt">财富运势</string>
    <string name="work_star">工作指数</string>
    <string name="work_txt">工作运势</string>
    <string name="health_txt">健康运势</string>
    <string name="grxz">贵人星座</string>
    <string name="lucky_num">幸运数字</string>
    <string name="lucky_color">幸运颜色</string>
    <string name="lucky_direction">吉利方位</string>
    <string name="next_day">明日运势</string>
    <string name="next_week">本周运势</string>
    <string name="day_notice">今日谏言</string>
    <string name="general_txt">运势简评</string>
    <string name="week_notice">本周提醒</string>
    

</resources>
